<resources>
    <string name="app_name">RHDMS</string>
    <string name="system_name">RHDMS</string>
    <string name="placeholder_id">아이디</string>
    <string name="placeholder_pw">비밀번호</string>
    <string name="button_login">로그인</string>
    <string name="button_logout">로그아웃</string>
    <string name="text_pill_management">오늘의 약시간 : </string>
    <string name="text_bp_management">혈압 정보</string>
    <string name="text_bp_temp">120/80 mmHg</string>
    <string name="text_bp_measurement">혈압 측정</string>
    <string name="text_bp_last_recode_date">마지막 기록 : %s</string>
    <string name="text_bp_last_recode_high">수축기 %smmHg</string>
    <string name="text_bp_last_recode_low">이완기 %smmHg</string>
    <string name="text_bs_max_recode_value">최대 %smg/dL</string>
    <string name="text_bs_min_recode_value">최소 %smg/dL</string>
    <string name="text_bs_management">혈당 정보</string>
    <string name="text_date_range">%s ~ %s</string>
    <string name="text_bs_temp">103 mg/dL</string>
    <string name="text_bs_measurement">혈당 측정</string>
    <string name="text_set">설정</string>
    <string name="toggle_button_text">GraphUnit</string>
    <string name="toggle_button_month">월</string>
    <string name="toggle_button_week">주</string>
    <string name="label_pill_management">복약 정보</string>
    <string name="label_pill_info_update">복약 정보 갱신</string>
    <string name="pm_update_ok">확인</string>
    <string name="pm_update_cancel">취소</string>
    <string name="placeholder_taken_tm">복용한 시간</string>
    <string name="increase"><![CDATA[→]]></string>
    <string name="decrease"><![CDATA[←]]></string>
    <string name="label_pill_info_list">복약 정보 목록</string>
    <string name="connect_state">연결 상태</string>
    <string name="connect_standby">기기 연결 대기중...</string>
    <string name="ble_text">실시간 측정</string>
    <string name="text_statistics">통계</string>
</resources>