<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_logo" />

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/logo"
            android:layout_alignBottom="@id/logo"
            android:layout_marginStart="90dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/ic_setting"
            android:fontFamily="@font/nanumsquareb"
            android:text="@string/text_set"
            android:textColor="@android:color/transparent"/>

        <FrameLayout
            android:id="@+id/adherenceContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp">

            <ImageView
                android:id="@+id/adherenceImageView"
                android:layout_width="320dp"
                android:layout_height="147dp"
                android:src="@drawable/common" />

            <!-- 반투명한 하안색 직사각형 -->
            <View
                android:layout_gravity="bottom"
                android:layout_width="320dp"
                android:layout_height="100dp"
                android:background="@color/white"
                android:alpha="0.8"/>

            <TextView
                android:id="@+id/adherenceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Adherence Level"
                android:textColor="@color/black"
                android:fontFamily="@font/nanumsquareb"
                android:textSize="18sp"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/adherencePercentTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(AdherencePercentage)"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/nanumsquarer"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="90dp"/>

            <TextView
                android:id="@+id/lastTakenTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Last Taken: N/A"
                android:textSize="14sp"
                android:fontFamily="@font/nanumsquarer"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="120dp" />

        </FrameLayout>

        <!--약 시간 데이터가 옆에 뜰 수 있게 해야함-->

        <!--최근 혈압 데이터 뜰 수 있게 수정해야함(현재는 고정값)-->
        <Button
            android:id="@+id/button_pill_info"
            android:layout_width="320dp"
            android:layout_height="103dp"
            android:layout_below="@id/adherenceContainer"
            android:layout_marginTop="24dp"
            android:background="@drawable/ic_menu_pill"
            android:fontFamily="@font/nanumsquareb"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/text_pill_management"
            android:textSize="20sp" />


        <!--혈압과 같은 문제-->

        <Button
            android:id="@+id/button_pressure_info"
            android:layout_width="320dp"
            android:layout_height="103dp"
            android:layout_below="@id/button_pill_info"
            android:layout_marginTop="19dp"
            android:background="@drawable/ic_menu_bp"
            android:fontFamily="@font/nanumsquareb"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:text="Loading..."
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_sugar_info"
            android:layout_width="320dp"
            android:layout_height="103dp"
            android:layout_below="@id/button_pressure_info"
            android:layout_marginTop="21dp"
            android:background="@drawable/ic_menu_bc"
            android:fontFamily="@font/nanumsquareb"
            android:gravity="start|center_vertical"
            android:paddingStart="20dp"
            android:text="Loading..."
            android:textAllCaps="false"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/ble_n_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_sugar_info"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_ble"
                android:layout_width="156dp"
                android:layout_height="79dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_menu_mini"
                android:text="@string/ble_text"
                android:fontFamily="@font/nanumsquareb"
                android:textSize="16sp" />

            <Button
                android:id="@+id/buttonStatistics"
                android:layout_width="156dp"
                android:layout_height="79dp"
                android:layout_below="@id/buttonSettings"
                android:background="@drawable/ic_menu_mini"
                android:fontFamily="@font/nanumsquareb"
                android:text="@string/text_statistics" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>